Adding importers for producer and Statistics Canada yields. Converters for yields and areas added due to initial design.

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     testImplementation('junit:junit:4.13')
+    implementation 'com.opencsv:opencsv:5.1'
 }
 
 checkstyle {
