--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,21 @@ variables:
 before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
 
+stages:
+  - lint
+  - build
+  - test
+
+lint:
+  stage: lint
+  script: gradle check
+  cache:
+    key: "$CI_COMMIT_REF_NAME"
+    policy: push
+    paths:
+      - build
+      - .gradle
+
 build:
   stage: build
   script: gradle --build-cache assemble
@@ -26,7 +41,8 @@ build:
 
 test:
   stage: test
-  script: gradle check
+  script:
+    - gradle test
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
