--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,9 +29,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: chmod +x gradle
     - name: Run tests
-      run: ./gradlew test
+      run: ./gradle test
 
   build:
 
