--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,10 +28,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradle
     - name: Run tests
-      run: ./gradle test
+      uses: eskatos/gradle-command-action@v1
+      with:
+          gradle-version: rc
+          arguments: test
 
   build:
 
