--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,10 +15,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradle
-    - name: Lint all files
-      run: ./gradle check
+    - name: Lint files
+      uses: eskatos/gradle-command-action@v1
+      with:
+          gradle-version: rc
+          arguments: check
   
   test:
    runs-on: ubuntu-latest
@@ -44,7 +45,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradle
-    - name: Build with Gradle
-      run: ./gradle --build-cache assemble
+    - name: Build
+      uses: eskatos/gradle-command-action@v1
+      with:
+          gradle-version: rc
+          arguments: --build-cache assemble
